# linli

./: README.md
backend/: package-lock.json
backend/src/app/: layout.tsx  page.tsx
frontend/: package.json
frontend/src/app/: globals.css
server/: Cargo.toml  Dockerfile  \  docker-compose.yaml  init.sql
server/src/: database.rs  main.rs  server.rs  svrrequests.rs
