[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# hyper = { version = "1", features = ["full"] }
# tokio = { version = "1", features = ["full"] }
# http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hyper = { version = "1.2", features = ["full"] }
tokio = { version = "1.41.1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
http-body-util = "0.1"
serde_json = {version = "1.0.132"}
serde = { version = "1.0.215", features = ["derive"] }
bytes = "1.0"
reqwest = "0.12.9"
chrono = "0.4"
rand = "0.8.5"
dotenv = "0.15"
url = "2.5.3"
# hyper-util = "0.1.10"
# tokio-util = {version="0.7.12", features=["compat"]}
